--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,5 +10,5 @@ jobs:
     - run: pip install -r tests/test_requirements.txt
     - name: set up service_account_credentials.json
       run: |
-        echo ${{ secrets.service_account_credentials }} > service_account_credentials.json
+        echo "${{ secrets.service_account_credentials }}" > service_account_credentials.json
     - run: python -m unittest discover -s ./tests/
