--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - run: pip install -r tests/test_requirements.txt
-    - name: set up service_account_credentials.json
+    - name: Set up service_account_credentials.json
       run: |
         echo "${{ secrets.service_account_credentials }}" > service_account_credentials.json
+    - name: Set up .env
+      run: |
+        echo "${{ secrets.env }}" > .env
     - run: python -m unittest discover -s ./tests/
