--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,5 @@ jobs:
     - run: pip install -r tests/test_requirements.txt
     - name: Set up service_account_credentials.json
       run: |
-        echo "${{ secrets.SERVICE_ACCOUNT_CREDENTIALS }}" > service_account_credentials.json
+        echo '${{ secrets.SERVICE_ACCOUNT_CREDENTIALS }}' > service_account_credentials.json
     - run: python -m unittest discover -s ./tests/
