--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,11 @@ jobs:
       run: |
         sudo apt-get install -y ruby-full build-essential zlib1g-dev
         gem install --user-install jekyll bundler
+        GEM_BIN_DIR="$(gem environment gemdir)/bin"
         echo 'export PATH="$HOME/.gem/ruby/3.0.0/bin:$PATH"' >> $GITHUB_ENV
     - run: pip install -r tests/test_requirements.txt
     - name: Set up service_account_credentials.json
       run: |
         echo '${{ secrets.service_account_credentials }}' > service_account_credentials.json
-    - run: $HOME/.gem/ruby/3.0.0/bin/jekyll serve -B -s site
+    - run: jekyll serve -B -s site
     - run: python -m unittest discover -s ./tests/
